5.0.7
-----
(RB=635961)
OPTIONS response now includes named schemas from association keys.

5.0.6
-----
(RB=637091)
Modify multipart mime streaming test to avoid transient failures

(RB=631279)
Add option to specify a validator class map in RestLiDataValidator

5.0.5
-----
(RB=626749)
Enable delay markup in ZooKeeperAnnouncer

(RB=623465)
ByteString API changes to support multipart mime streaming

(RB=529863)
Introduce async multipart mime support

5.0.4
-----
(RB=636416)
Fix bug in ReplaceableFilter so that it won't buffer request/response
when not active.

5.0.3
-----
(RB=621007)
Updated DataTemplateUtil with new coercion error messages

(RB=631228)
Extend range of permissible protocol versions


5.0.2
-----
(RB=628388)
Add restOverStream switch to D2ClientBuilder

5.0.1
-----
(RB=628290)
Make CapRep work in streaming when activated

5.0.0
-----
(RB=555314)
Change rest.li client request default protocol version.

4.1.0
-----
(RB=620254)
Add streaming code path on client side & server side
The default is to use the existing code path.
(RB=624779)
Increase timeout values in some tests


4.0.0
-----
(RB=623469)
Gradle changes for Java 8

(RB=622730,622181)
Refactor ErrorResponse formatting so that it is more flexible

(RB=577075)
Two bug fixes: rest.li batch projection in response builder, restli validation schema source.

3.1.4
-----
(RB=617238)
Made multiplexer returns correct HTTP status code (by throwing the right type of Exception) when encounter errors.

(RB=610914)
Prevent possible NPEs in RestLiDataValidator.

(RB=621248)
Include custom annotations in request builder specs

3.1.3
-----
(RB=619857)
Add HTTP status code in response body for ErrorResponse in certain formats.

(RB=618755)
Refactoring the d2config code for serviceGroup

3.1.2
------
(RB=618172)
Provide decouping of class exception and stack trace for certain client use cases.

3.1.1
------
(RB=613684)
Improve Rest.li client error message in handling non-JSON RestException.

3.1.0
------